# ige

./: .gitignore  .gitmodules  Cargo.toml  ChangeLog.md  Plans.md  README.md  TODO.md  ige.cabal  shell.nix
c_testing/: Makefile  shell.nix
c_testing/examples/: pango.c
c_testing/src/: echoc  echoc.c  echos  echos.c  graphs.c  graphs.h  main.c
examples/: cairo_xlib.c
ige-backend/: EchoC.hs  EchoS.hs  IgeBackend.hs  Lisp.hs  Messages.hs  ige-backend.cabal  shell.nix
ige-frontend/: Cargo.toml  shell.nix
ige-frontend/src/: display.rs  graphics.rs  layout.rs  lib.rs  logic.rs  messages.rs  selector.rs
ige-next/: ChangeLog.md  Plans.md  ige.cabal  samplegraph.json  shell.nix
ige-next/src/: Main.hs
ige-next/src/IGE/: Control.hs  Drawing.hs  Graph.hs  Layout.hs  Lisp.hs  Render.hs  Types.hs  UI.hs
pipes/orchestrator/: orchestrator.cabal
pipes/pipes-hs/: Main.hs  Messages.hs  shell.nix
pipes/pipes-rs/: Cargo.toml  shell.nix
pipes/pipes-rs/src/: lib.rs
renderer/: Cargo.toml
src/: Main.hs  main.c  main.rs
src/IGE/: Control.hs  Keys.hs  Render.hs  Serialization.hs  Types.hs  UI.hs
