name:               pipes-hs
version:            0.0.0
cabal-version:      >= 1.8
build-type:         Simple
extra-source-files:

executable          ige-backend
  main-is:          IgeBackend.hs
  other-modules: Messages

  ghc-options:      -Wall -fwarn-tabs -O2

  build-depends:  base
                , aeson
                , text
                , bytestring
                , optparse-applicative
                , unix
                , network
                , binary-conduit
                , binary
                , data-msgpack
                , conduit
                , conduit-combinators
                , conduit-extra
                , transformers
                , containers

  ghc-options:    -threaded -O2 -rtsopts -with-rtsopts=-N
