[package]
name = "ige_frontend"
version = "0.1.0"
authors = ["Owen Lynch <oclynch888@gmail.com>"]

[lib]
name = "ige_frontend"

[dependencies]
gtk = "0.1"
gdk = "0.5"
glib = "0.0.8"
cairo-rs = "0.1"
petgraph = "0.4"
regex = "0.2"
cgmath = "0.12.0"
serde = "0.9"
rmp-serde = "0.12"
serde_derive = "0.9"
argparse = "*"

[[bin]]
name = "example"

[[bin]]
name = "testing"

[[bin]]
name = "ige_frontend"
