name:               orchestrator
version:            0.0.0
cabal-version:      >= 1.8
build-type:         Simple
extra-source-files: 

executable          orchestrator
  main-is:          Main.hs
  other-modules:

  ghc-options:      -Wall -fwarn-tabs -O2

  build-depends:  base
                , aeson

  ghc-options:    -threaded -O2 -rtsopts -with-rtsopts=-N